updated text and colors

--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,6 +1,6 @@
-title: Creative Coding 1, MART 120
-title-short: Creative Coding 1
-description: A course to teach code so that it becomes a tool for art and creativity.
+title: Game Engines, MART 460
+title-short: Game Engines
+description: A course to teach game design and programming using a game engine.
 institution: University of Montana, School of Media Arts
 institution-short: Media Arts | Montana
 
